--- a/app/build.gradle
+++ b/app/build.gradle
@@ -33,7 +33,7 @@ android {
     }
 
     buildFeatures{
-        viewBinding true
+        viewBinding = true
     }
 }
 
@@ -50,6 +50,14 @@ dependencies {
     androidTestImplementation 'androidx.test.ext:junit:1.1.5'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.5.1'
     apply plugin: 'kotlin-android-extensions'
-    //timer management
+
+    //timer management ???
     implementation 'me.zhanghai.android.materialprogressbar:library:1.6.1'
+
+    //MVVM
+    implementation 'androidx.activity:activity-ktx:1.6.1'
+
+    // Navigation
+    implementation "androidx.navigation:navigation-fragment-ktx:$nav_version"
+    implementation "androidx.navigation:navigation-ui-ktx:$nav_version"
 }
