--- a/app/build.gradle
+++ b/app/build.gradle
@@ -1,6 +1,7 @@
 plugins {
     id 'com.android.application'
     id 'org.jetbrains.kotlin.android'
+    id 'androidx.navigation.safeargs.kotlin'
 }
 
 android {
@@ -50,9 +51,6 @@ dependencies {
     androidTestImplementation 'androidx.test.ext:junit:1.1.5'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.5.1'
     apply plugin: 'kotlin-android-extensions'
-
-    //timer management ???
-    implementation 'me.zhanghai.android.materialprogressbar:library:1.6.1'
 
     //MVVM
     implementation 'androidx.activity:activity-ktx:1.6.1'
