--- a/app/build.gradle
+++ b/app/build.gradle
@@ -61,7 +61,10 @@ dependencies {
 
     //Retrofit
     implementation "com.squareup.retrofit2:retrofit:2.9.0"
+    implementation "com.squareup.retrofit2:converter-gson:2.9.0"
     implementation "com.squareup.retrofit2:converter-moshi:2.9.0"
+
+    //moshi
     implementation "com.squareup.moshi:moshi-kotlin:1.14.0"
 
 }
