--- a/app/build.gradle
+++ b/app/build.gradle
@@ -52,19 +52,20 @@ dependencies {
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.5.1'
     apply plugin: 'kotlin-android-extensions'
 
-    //MVVM
-    implementation 'androidx.activity:activity-ktx:1.6.1'
-
     // Navigation
     implementation "androidx.navigation:navigation-fragment-ktx:$nav_version"
     implementation "androidx.navigation:navigation-ui-ktx:$nav_version"
 
     //Retrofit
     implementation "com.squareup.retrofit2:retrofit:2.9.0"
-    implementation "com.squareup.retrofit2:converter-gson:2.9.0"
     implementation "com.squareup.retrofit2:converter-moshi:2.9.0"
-
-    //moshi
     implementation "com.squareup.moshi:moshi-kotlin:1.14.0"
+
+    // Coil
+    implementation "io.coil-kt:coil:2.2.2"
+
+    //Jamendo API implementation 'com.jamendo.api:jamendo-android:1.0.1'
+
+
 
 }
